--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/brand/Logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html class="scroll-smooth" lang="es">
+<head>
+    <meta charset="UTF-8"/>
+    <link href="/src/assets/brand/Logo.svg" rel="icon" type="image/png"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="description" content="Mestizo es un café enlatado elaborado en El Salvador con mezclas de canela, chocolate, capuccino, leche o café puro.">
     <title>Mestizo</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+</head>
+<body>
+<div id="app"></div>
+<script src="/src/main.js" type="module"></script>
+</body>
 </html>
